EJ 1: Hecho la navbar, falta el banner y resto de contenido

--- a/index.html
+++ b/index.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Play&Win.Net</title>
+    <title>Play&Sing.Net</title>
+    <link rel="stylesheet" href="/styles/index.css">
+    <script src="/scripts/colorTitle.js"></script>
 </head>
-<body>
-    <main>
 
+<body>
+    <header>
+        <p id="welcome-txt"> <em> Be welcome to...</em></p>
+        <div id="page-title">
+            <img src="/assets/images/cd2.gif" alt="cd spining">
+            <h1 id="name-txt">Play and Sing</h1>
+            <img src="/assets/images/cd2.gif" alt="cd spining">
+        </div>
+        <img src="/assets/images/linea.gif" alt="linea arcoiris" width="1000px">
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#top">Top 5</a></li>
+                <li><a href="#artist">Artist of the week</a></li>
+                <li><a href="#events">Events</a></li>
+            </ul>
+        </nav>
+        <img src="/assets/images/linea.gif" alt="linea arcoiris" width="1000px">
+    </header>
+    <main>
+        <section id="home">
+            sex
+        </section>
     </main>
     <footer>
-        
+
     </footer>
+
 </body>
 </html>
