EJ 1: Top de musica hecho

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p id="welcome-txt"> <em> Be welcome to...</em></p>
         <div id="page-title">
             <img src="/assets/images/cd2.gif" alt="cd spining">
-            <h1 id="name-txt">Play and Sing</h1>
+            <h1 id="name-txt">Play & Sing</h1>
             <img src="/assets/images/cd2.gif" alt="cd spining">
         </div>
         <img src="/assets/images/linea.gif" alt="linea arcoiris" width="1000px">
@@ -30,12 +30,60 @@
     </header>
     <main>
         <section id="home">
+            <h3>🎵 Welcome to the <em>coolest</em> music page 🎵 </h3>
+            <img src="/assets/images/banner.png" alt="coolbanner">
+        </section>
+        <section id="top">
+            <h1>Top 5 songs of the week</h1>
+            <ol type="1">
+                <li>
+                    <a href="https://youtu.be/PsO6ZnUZI0g?si=cCVu7EI08JeWzD8X" target="_blank">
+                        Stronger by Kanye West
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=Bg59q4puhmg" target="_blank">
+                        Girlfriend by Avril Lavinge
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=8UFIYGkROII" target="_blank">
+                        Crank That (Soulja Boy) by Soulja Boy
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=7lBUiFdQLu0" target="_blank">
+                        Beautiful Girls by Sean Kingston
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=CvBfHwUxHIk" target="_blank">
+                        Umbrella by Rihanna featuring Jay-Z
+                    </a>
+                </li>
+            </ol>
+            <div id="top-3">
+                <a href="https://www.youtube.com/watch?v=Bg59q4puhmg" target="_blank">
+                    <img src="/assets/images/top3/Avril_Lavigne_-_Girlfriend.png" alt="top 2" height="200px">
+                </a>
+                <a href="https://youtu.be/PsO6ZnUZI0g?si=cCVu7EI08JeWzD8X" target="_blank">
+                    <img src="/assets/images/top3/KW-Stronger.jpg" alt="top 1" height="220px">
+                </a>
+                <a href="https://www.youtube.com/watch?v=8UFIYGkROII" target="_blank">
+                    <img src="/assets/images/top3//Crank_That_(Soulja_Boy).JPG" alt="top 3" height="180px">
+                </a>
+            </div>
+        </section>
+        <section id="artist">
+            sex
+        </section>
+        <section id="events">
             sex
         </section>
     </main>
     <footer>
 
     </footer>
-
 </body>
+
 </html>
