EJ 1: tabla eventos y footer realizado

--- a/index.html
+++ b/index.html
@@ -75,15 +75,50 @@
             </div>
         </section>
         <section id="artist">
-            sex
+            <h1>Artist of the week</h1>
+            <h2><em>Kanye West</em></h2>
+            <img src="/assets/images/Kanye.jpg" alt="he made graduation" height="90%">
         </section>
         <section id="events">
-            sex
+            <h1>Events</h1>
+
+            <table style="width:100%">
+                <tr>
+                  <th>Name </th>
+                  <th>Location</th>
+                  <th>Date</th>
+                </tr>
+                <tr>
+                  <td>When we were young</td>
+                  <td>Las Vegas</td>
+                  <td>Octuber 21 and 22</td>
+                </tr>
+                <tr>
+                    <td>Coachella </td>
+                    <td>Coachella</td>
+                    <td>April 12-14</td>
+                </tr>
+                <tr>
+                    <td>Tecate Sonoro </td>
+                    <td>Hermosillo</td>
+                    <td>???</td>
+                </tr>
+                <tr>
+                    <td>Tecate 'Pal Norte </td>
+                    <td>Monterrey</td>
+                    <td>???</td>
+                </tr>
+              </table>
         </section>
     </main>
     <footer>
-
+        <h3>Formulario de contactos</h3>
+        <h5>Contactis adicionales | Redes sociales</h5>
+        <p>Berny Urquijo&copy; 2023</p>    
     </footer>
-</body>
+    <center>
+        <img src="/assets/images/winxp.gif" alt="windows xp">
+    </center>    
+    </body>
 
 </html>
