artist of the week and events

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 alt="top 3"
                 height="70%"
               />
-              <p>Top 3 </p>
+              <p>Top 3</p>
             </a>
           </div>
         </div>
@@ -121,42 +121,122 @@
       <section id="artist">
         <h1>Artist of the week</h1>
         <h2><em>Kanye West</em></h2>
-        <img
-          src="/assets/images/Kanye.jpg"
-          alt="he made graduation"
-          height="90%"
-        />
-      </section>
+        <div class="artist-stuff">
+
+            <div class="artist-description">
+                <img
+                src="/assets/images/Kanye.jpg"
+                alt="he made graduation"
+                />
+                <p style="text-align: justify;">
+                    One of the most influential rappers of all time, this man made graduation and there is nothing he can do wrong in terms of music. He's a genious. 
+                </p>
+            </div>
+            <div class="artist-comments">
+                <h3>Comments about Kanye by other artists:</h3>
+                <div class="comment">
+                    <div class="comment-img">
+                        <img src="/assets/images/taylor.jpg" alt="taylor swift">
+                    </div>
+                    <div class="comment-rating">
+                      <p><em>Taylor Switf Says:</em></p>
+                      <p>Kanye West basically made me famous. </p>
+                    </div>
+                </div>
+                <div class="comment">
+                    <div class="comment-img">
+                      <img src="/assets/images/peje.png" alt="pejelagarto (amlo)">
+                    </div>
+                    <div class="comment-rating">
+                      <p><em>AMLO Says:</em></p>
+                      <p>No le entiendo al ingles pero amo a Kanye. </p>
+                    </div>
+                </div>
+                <div class="comment">
+                    <div class="comment-img">
+                      <img src="/assets/images/jayz.png" alt="Jay-Z">
+                    </div>
+                    <div class="comment-rating">
+                      <p><em>Jay-Z Says:</em></p>
+                      <p>That's my brother, we're beyond friends.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </section>
       <section id="events">
         <h1>Events</h1>
 
-        <table style="width: 100%">
-          <tr>
-            <th>Name</th>
-            <th>Location</th>
-            <th>Date</th>
-          </tr>
-          <tr>
-            <td>When we were young</td>
-            <td>Las Vegas</td>
-            <td>Octuber 21 and 22</td>
-          </tr>
-          <tr>
-            <td>Coachella</td>
-            <td>Coachella</td>
-            <td>April 12-14</td>
-          </tr>
-          <tr>
-            <td>Tecate Sonoro</td>
-            <td>Hermosillo</td>
-            <td>???</td>
-          </tr>
-          <tr>
-            <td>Tecate 'Pal Norte</td>
-            <td>Monterrey</td>
-            <td>???</td>
-          </tr>
-        </table>
+<div class="event-list">
+  <div class="event">
+    <div class="event-image">
+      <img src="/assets/images/tomorrow.jpg" alt="tomorrow land">
+    </div>
+    <div class="event-details">
+      <div class="event-title">
+        <h4>Tomorrow Land</h4>
+      </div>
+      <div class="event-location">
+        <p>Somewhere in Belgica</p>
+      </div>
+    </div>
+  </div>
+  <div class="event">
+    <div class="event-image">
+      <img src="/assets/images/onda.jpg" alt="onda sonora">
+    </div>
+    <div class="event-details">
+      <div class="event-title">
+        <h4>Onda Sonora</h4>
+      </div>
+      <div class="event-location">
+        <p>In Hermosillo, Sonora</p>
+      </div>
+    </div>
+  </div>
+  <div class="event">
+    <div class="event-image">
+      <img src="/assets/images/coachella.webp" alt="coachella">
+    </div>
+    <div class="event-details">
+      <div class="event-title">
+        <h4>Coachella Festival</h4>
+      </div>
+      <div class="event-location">
+        <p>In Coachella Valley, California</p>
+      </div>
+    </div>
+  </div>
+  <div class="event">
+    <div class="event-image">
+      <img src="/assets/images/tecate.png" alt="tecate sibiri">
+    </div>
+    <div class="event-details">
+      <div class="event-title">
+        <h4>Tecate Sonoro</h4>
+
+      </div>
+      <div class="event-location">
+        <p>In Hermosillo, Sonora</p>
+
+      </div>
+    </div>
+  </div>
+  <div class="event">
+    <div class="event-image">
+      <img src="/assets/images/wwwy.webp" alt="when we were young banner">
+    </div>
+    <div class="event-details">
+      <div class="event-title">
+        <h4>When we were young</h4>
+      </div>
+      <div class="event-location">
+        <p>In Las Vegas</p>
+      </div>
+    </div>
+  </div>
+
+</div>
       </section>
     </main>
     <footer>
