--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Play&Sing.Net</title>
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/styles/index.css" />
     <script src="/scripts/colorTitle.js"></script>
     <script src="/scripts/goUp.js"></script>
+    <script src="/scripts/form.js"></script>
   </head>
 
   <body>
@@ -17,7 +20,7 @@
         <h1 id="name-txt">Play & Sing</h1>
         <img src="/assets/images/cd2.gif" alt="cd spining" />
       </div>
-      <img src="/assets/images/linea.gif" alt="linea arcoiris" width="1000px" />
+      <img src="/assets/images/linea.gif" alt="linea arcoiris" width="100%" />
       <nav>
         <ul>
           <li><a href="#home">Home</a></li>
@@ -26,7 +29,7 @@
           <li><a href="#events">Events</a></li>
         </ul>
       </nav>
-      <img src="/assets/images/linea.gif" alt="linea arcoiris" width="1000px" />
+      <img src="/assets/images/linea.gif" alt="linea arcoiris" width="100%" />
     </header>
     <main>
       <section id="home">
@@ -77,7 +80,7 @@
           </li>
         </ol>
         <div id="top-3">
-          <div class="podium">
+          <div class="podium turn-invisible">
             <a
               href="https://www.youtube.com/watch?v=Bg59q4puhmg"
               target="_blank"
@@ -103,7 +106,7 @@
               <p>Top 1</p>
             </a>
           </div>
-          <div class="podium">
+          <div class="podium turn-invisible">
             <a
               href="https://www.youtube.com/watch?v=8UFIYGkROII"
               target="_blank"
@@ -254,7 +257,7 @@
           id="message"
           name="message"
           rows="4"
-          cols="50"
+          cols="30"
           required
         ></textarea
         ><br />
