EJ3: Iconos de footer

--- a/index.html
+++ b/index.html
@@ -265,6 +265,18 @@
         <button type="submit" style="background-color: #00ff00">Enviar</button>
       </form>
       <p>Berny Urquijo&copy; 2023 </p>
+      <div id="social-media">
+        <a href="https://facebook.com" target="_blank">
+          <img src="/assets/images/social/facebook.png " alt="facebook logo">
+        </a>
+        <a href="https://www.instagram.com" target="_blank">
+          <img src="/assets/images/social/instagram.png" alt="instagram logo">
+        </a>
+        <a href="https://www.twitter.com" target="_blank">
+          <img src="/assets/images/social/twitter.png" alt="twitter logo">
+        </a>
+
+      </div>
     </footer>
     <button id="go-up">
       <img src="/assets/images/upload.svg" alt="up button" />
